// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/publish-post/instagram PublishPost error cases invalid profileId ends in not found error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"GraphMethodException\\",
  \\"detail\\": \\"Unsupported post request. Object with ID '4' does not exist, cannot be loaded due to missing permissions, or does not support this operation. Please read the Graph API documentation at https://developers.facebook.com/docs/graph-api\\",
  \\"original\\": {
    \\"message\\": \\"Unsupported post request. Object with ID '4' does not exist, cannot be loaded due to missing permissions, or does not support this operation. Please read the Graph API documentation at https://developers.facebook.com/docs/graph-api\\",
    \\"type\\": \\"GraphMethodException\\",
    \\"code\\": 100,
    \\"error_subcode\\": 33,
    \\"fbtrace_id\\": \\"AHVI28-yMbR5uID5iiU4cet\\"
  }
}
AST Path: definitions[0].statements[10].statements[0]
Original Map Location: Line 32, column 5",
}
`;

exports[`social-media/publish-post/instagram PublishPost error cases missing media causes immediate failure 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Media url required\\",
  \\"detail\\": \\"You must provide one media with URL for Instagram provider\\"
}
AST Path: definitions[0].statements[5]
Original Map Location: Line 14, column 3",
}
`;

exports[`social-media/publish-post/instagram PublishPost media custom input carousel 1`] = `
Ok {
  "value": Object {
    "postId": "18219205078144675",
    "url": "https://www.instagram.com/p/CgU3j4ftpdn/",
  },
}
`;

exports[`social-media/publish-post/instagram PublishPost media custom input single picture 1`] = `
Ok {
  "value": Object {
    "postId": "17903829641624005",
    "url": "https://www.instagram.com/p/CgU3ilsNGN8/",
  },
}
`;
